Fix for wrapping title on medal snap

--- a/interactive/src/css/embed.scss
+++ b/interactive/src/css/embed.scss
@@ -421,6 +421,10 @@ $bronzeLight: rgba(243,111,33,0.2);
 	time {
 		display: inline-block;
     	min-width: 40px;
+
+    	@include mq(tablet, desktop) {
+    		display: inline;
+    	}
 	}
 }
 
